--- a/src/Components/ArrowButton/ArrowButton.css
+++ b/src/Components/ArrowButton/ArrowButton.css
@@ -35,22 +35,24 @@
     color: #1F1F1F;
 }
 
-.arrow-left:active, .arrow-right:active {
+.arrow-left:active,
+.arrow-right:active {
     color: #3B71D3;
 }
 
-.arrow-left:hover, .arrow-right:hover {
-   color: #3B71D3;
+.arrow-left:hover,
+.arrow-right:hover {
+    color: #3B71D3;
 }
 
 @media (max-width: 745px) {
     .arrow-button {
         display: none;
     }
-  }
-  
-  @media (max-width: 376px) {
+}
+
+@media (max-width: 376px) {
     .arrow-button {
         display: none;
     }
-  }
+}
